hphp/test/slow/coeffects/write_props/pure-lambda-inherited-error.php.expectf
Fatal error: Writing to object properties in a pure function is not allowed. in %s on line 13
